[project]
name = "ai-agent-builder-assignment-02"
version = "0.1.0"
description = "YouTube Thumbnail Designer using LangGraph Reflexion Pattern"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.2.0",
    "langchain-openai>=1.0",
    "langchain-community>=0.4.0",
    "langchain-core>=1.0",
    "openai>=2.0",
    "requests>=2.31.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "tavily-python>=0.7",
]
